respaldo-depuracion/2026-09-04-lote3-campos-objetos/objects/Air_Waybill__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Information__c</fullName>
        <inlineHelpText>10</inlineHelpText>
        <label>Accounting Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Airline_Code_Number__c</fullName>
        <formula>Carrier_Account__r.Airline_Code_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1A</inlineHelpText>
        <label>Carrier Code Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_To_by_First_Carrier_Code__c</fullName>
        <formula>Airport_To_by_First_Carrier__r.IATA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>11A
            (Note: Information needs to be transformed into IATA three-letter code for airport)</inlineHelpText>
        <label>Site To (by First Carrier) (Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_To_by_First_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site To (by First Carrier)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Location__c.Country__c</field>
                <operation>equals</operation>
                <valueField>$Source.Country_To_by_First_Carrier__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Airport To (by First Carrier))</relationshipLabel>
        <relationshipName>Air_Waybills1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airport_To_by_Second_Carrier_Code__c</fullName>
        <formula>Airport_To_by_Second_Carrier__r.UNLOCODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>11D</inlineHelpText>
        <label>Site To (by Second Carrier) (Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_To_by_Second_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site To (by Second Carrier)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country_To_by_Second_Carrier__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Airport To (by Second Carrier))</relationshipLabel>
        <relationshipName>Air_Waybills2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airport_To_by_Third_Carrier_Code__c</fullName>
        <formula>Airport_To_by_Third_Carrier__r.UNLOCODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>11F</inlineHelpText>
        <label>Site To (by Third Carrier) (Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_To_by_Third_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Site To (by Third Carrier)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country_To_by_Third_Carrier__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Airport To (by Third Carrier))</relationshipLabel>
        <relationshipName>Air_Waybills3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airport_of_Departure_Code__c</fullName>
        <formula>Airport_of_Departure__r.UNLOCODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site of Departure (Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Airport_of_Departure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>9</inlineHelpText>
        <label>Site of Departure</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Country_of_Departure__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Airport of Departure)</relationshipLabel>
        <relationshipName>Air_Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Airport_of_Destination_Code__c</fullName>
        <formula>Site_of_Destination__r.UNLOCODE__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Site of Destination (Code)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Fligtht_1__c</fullName>
        <label>Alternative Fligtht 1</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Alternative_Fligtht_2__c</fullName>
        <label>Alternative Fligtht 2</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Amount_of_Insurance__c</fullName>
        <inlineHelpText>20
            (Note: If empty, need to show &quot;XXX&quot;)</inlineHelpText>
        <label>Amount of Insurance</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>By_First_Carrier_Account_Address__c</fullName>
        <formula>IF(By_First_Carrier_Account__r.BillingStreet != null, By_First_Carrier_Account__r.BillingStreet, &apos;&apos;)
            &amp;
            IF(By_First_Carrier_Account__r.BillingCity != null, &apos;, &apos;&amp;By_First_Carrier_Account__r.BillingCity, &apos;&apos;)
            &amp;
            IF(By_First_Carrier_Account__r.BillingPostalCode != null, &apos;, &apos;&amp;By_First_Carrier_Account__r.BillingPostalCode, &apos;&apos;)
            &amp;
            IF(By_First_Carrier_Account__r.BillingState != null, &apos;, &apos;&amp;By_First_Carrier_Account__r.BillingState, &apos;&apos;)
            &amp;
            IF(By_First_Carrier_Account__r.BillingCountry != null, &apos;, &apos;&amp;By_First_Carrier_Account__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>By First Carrier Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>By_First_Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>11B
            (Note: Full name or IATA two-letter code both valid)</inlineHelpText>
        <label>By First Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Air_Waybills4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_Second_Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>11D
            (Note: IATA two-letter code required, must find way to automate this)</inlineHelpText>
        <label>By Second Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Air_Waybills5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>By_Third_Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>11F</inlineHelpText>
        <label>By Third Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Air_Waybills6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carrier_Account_Address__c</fullName>
        <formula>IF(Carrier_Account__r.BillingStreet != null, Carrier_Account__r.BillingStreet, &apos;&apos;)
            &amp;
            IF(Carrier_Account__r.BillingCity != null, &apos;, &apos;&amp;Carrier_Account__r.BillingCity, &apos;&apos;)
            &amp;
            IF(Carrier_Account__r.BillingPostalCode != null, &apos;, &apos;&amp;Carrier_Account__r.BillingPostalCode, &apos;&apos;)
            &amp;
            IF(Carrier_Account__r.BillingState != null, &apos;, &apos;&amp;Carrier_Account__r.BillingState, &apos;&apos;)
            &amp;
            IF(Carrier_Account__r.BillingCountry != null, &apos;, &apos;&amp;Carrier_Account__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>1C</inlineHelpText>
        <label>Carrier Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carrier_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>1C</inlineHelpText>
        <label>Carrier Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Air_Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carriers_Agent_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>6</inlineHelpText>
        <label>Carrier&apos;s Agent Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Record_Type_Name__c</field>
                <operation>equals</operation>
                <value>Supply Chain Partner</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Air_Waybills3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Carriers_Agent_Address__c</fullName>
        <formula>IF(Carriers_Agent_Account__r.BillingStreet != null, Carriers_Agent_Account__r.BillingStreet, &apos;&apos;)
            &amp;
            IF(Carriers_Agent_Account__r.BillingCity != null, &apos;, &apos;&amp;Carriers_Agent_Account__r.BillingCity, &apos;&apos;)
            &amp;
            IF(Carriers_Agent_Account__r.BillingPostalCode != null, &apos;, &apos;&amp;Carriers_Agent_Account__r.BillingPostalCode, &apos;&apos;)
            &amp;
            IF(Carriers_Agent_Account__r.BillingState != null, &apos;, &apos;&amp;Carriers_Agent_Account__r.BillingState, &apos;&apos;)
            &amp;
            IF(Carriers_Agent_Account__r.BillingCountry != null, &apos;, &apos;&amp;Carriers_Agent_Account__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Carrier&apos;s Agent Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carriers_Agent_City__c</fullName>
        <formula>IF(Carriers_Agent_Account__r.BillingCity != null, Carriers_Agent_Account__r.BillingCity, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>6</inlineHelpText>
        <label>Carrier&apos;s Agent City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Account_Address__c</fullName>
        <formula>IF(Consignee_Account__r.BillingStreet != null, Consignee_Account__r.BillingStreet, &apos;&apos;)
            &amp;
            IF(Consignee_Account__r.BillingCity != null, &apos;, &apos;&amp;Consignee_Account__r.BillingCity, &apos;&apos;)
            &amp;
            IF(Consignee_Account__r.BillingPostalCode != null, &apos;, &apos;&amp;Consignee_Account__r.BillingPostalCode, &apos;&apos;)
            &amp;
            IF(Consignee_Account__r.BillingState != null, &apos;, &apos;&amp;Consignee_Account__r.BillingState, &apos;&apos;)
            &amp;
            IF(Consignee_Account__r.BillingCountry != null, &apos;, &apos;&amp;Consignee_Account__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>4</inlineHelpText>
        <label>Consignee Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Account_Phone__c</fullName>
        <formula>Consignee_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>4</inlineHelpText>
        <label>Consignee Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>4</inlineHelpText>
        <label>Consignee Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consignee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waybills (Consignee Account)</relationshipLabel>
        <relationshipName>Air_Waybills2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Alternative_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Alternative Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consignee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waybills (Consignee Alternative Account)</relationshipLabel>
        <relationshipName>Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Alternative_Address__c</fullName>
        <label>Consignee Alternative Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consignee_Alternative_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Alternative Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Waybills (Consignee Alternative Country)</relationshipLabel>
        <relationshipName>Waybills1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_Alternative_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee Alternative Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Consignee_Alternative_Country__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Consignee Alternative Location)</relationshipLabel>
        <relationshipName>Waybills1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_House_Account_Address__c</fullName>
        <formula>IF(Consignee_House__r.BillingStreet != null, Consignee_House__r.BillingStreet, &apos;&apos;) 
&amp; 
IF(Consignee_House__r.BillingCity != null, &apos;, &apos;&amp;Consignee_House__r.BillingCity, &apos;&apos;) 
&amp; 
IF(Consignee_House__r.BillingPostalCode != null, &apos;, &apos;&amp;Consignee_House__r.BillingPostalCode, &apos;&apos;) 
&amp; 
IF(Consignee_House__r.BillingState != null, &apos;, &apos;&amp;Consignee_House__r.BillingState, &apos;&apos;) 
&amp; 
IF(Consignee_House__r.BillingCountry != null, &apos;, &apos;&amp;Consignee_House__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee House Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_House_Account_Phone__c</fullName>
        <formula>Consignee_House__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Consignee House Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Consignee_House_Alternative_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee House Alternative Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consignee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waybills (Consignee House Alternative Account)</relationshipLabel>
        <relationshipName>Waybills2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_House_Alternative_Address__c</fullName>
        <label>Consignee House Alternative Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Consignee_House_Alternative_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee House Alternative Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Waybills (Consignee House Alternative Country)</relationshipLabel>
        <relationshipName>Waybills2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_House_Alternative_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee House Alternative Location</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Consignee_House_Alternative_Country__c</field>
                <operation>equals</operation>
                <valueField>Location__c.Country__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Waybills (Consignee House Alternative Location)</relationshipLabel>
        <relationshipName>Waybills2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consignee_House__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consignee House</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Consignee</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waybills (Consignee House)</relationshipLabel>
        <relationshipName>Waybills1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_To_by_First_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country To (by First Carrier)</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Air_Waybills1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_To_by_Second_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country To (by Second Carrier)</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Air_Waybills2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_To_by_Third_Carrier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country To (by Third Carrier)</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Air_Waybills3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Departure__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Departure</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipName>Air_Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country_of_Destination__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Country of Destination</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Waybills (Country of Destination)</relationshipLabel>
        <relationshipName>Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_of_Flight__c</fullName>
        <label>ETD</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Declared_Value_For_Carriage__c</fullName>
        <inlineHelpText>16
            (Note: If empty, need to show &quot;NVD&quot;)</inlineHelpText>
        <label>Declared Value For Carriage</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Declared_Value_For_Customs__c</fullName>
        <inlineHelpText>17
            (Note: If empty, need to show &quot;NCV&quot;)</inlineHelpText>
        <label>Declared Value For Customs</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Direct_Shipment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Direct Shipment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Display_House_Number_on_PDF__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Display House Number on PDF</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Consignee_Alternative_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Consignee Alternative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Consignee_House_Alt_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Consignee House Alternative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enable_Shipper_Alternative_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Shipper Alternative</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Executed_on_date__c</fullName>
        <inlineHelpText>32A</inlineHelpText>
        <label>Executed on (date)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flight_Number__c</fullName>
        <label>Flight Number</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Handling_Information__c</fullName>
        <inlineHelpText>20</inlineHelpText>
        <label>Handling Information</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Hide_House_Totals__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide House Totals</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>House_Executive_Counter__c</fullName>
        <label>House Executive Counter</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Executive_Letter__c</fullName>
        <label>House Executive Letter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>House_Reference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>House Reference</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.Id</field>
                <operation>equals</operation>
                <valueField>Waybill_Consolidation__c.Waybill__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Waybill_Consolidation__c</referenceTo>
        <relationshipLabel>Waybills</relationshipLabel>
        <relationshipName>Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IATA_Code_Manual__c</fullName>
        <label>IATA Code Manual</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IATA_Code__c</fullName>
        <formula>Carriers_Agent_Account__r.IATA_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>7</inlineHelpText>
        <label>IATA Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issuing_Carrier_s_Signature__c</fullName>
        <inlineHelpText>32C</inlineHelpText>
        <label>Issuing Carrier&apos;s Signature</label>
        <length>24</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MAWB_Number__c</fullName>
        <formula>Airline_Code_Number__c+&apos;-&apos;+Serial_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>MAWB_Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nature_of_Goods__c</fullName>
        <label>Nature of Goods MAWB</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Count__c</fullName>
        <label>Other Charges Count</label>
        <summaryForeignKey>Waybill_Other_Charge__c.Waybill__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Other_Charges_House__c</fullName>
        <label>Other Charges House</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Charges_Master__c</fullName>
        <label>Other Charges Master</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Other_Charges__c</fullName>
        <inlineHelpText>23</inlineHelpText>
        <label>Other Charges</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Payment__c</fullName>
        <label>Payment</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepaid_Collect_House_Other__c</fullName>
        <label>Prepaid/Collect House (Other)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepaid_Collect_House_WT_VAL__c</fullName>
        <label>Prepaid/Collect House (WT/VAL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepaid_Collect_Other__c</fullName>
        <inlineHelpText>15A/15B</inlineHelpText>
        <label>Prepaid/Collect (Other)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                    <default>true</default>
                    <label>Prepaid</label>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Prepaid_Collect_WT_VAL__c</fullName>
        <inlineHelpText>14A/14B</inlineHelpText>
        <label>Prepaid/Collect (WT/VAL)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Prepaid</fullName>
                </value>
                <value>
                    <fullName>Collect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <inlineHelpText>1B</inlineHelpText>
        <label>Serial Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipment</label>
        <referenceTo>Shipment__c</referenceTo>
        <relationshipLabel>Waybills</relationshipLabel>
        <relationshipName>Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipments_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipments Program</label>
        <referenceTo>Shipment_Program__c</referenceTo>
        <relationshipName>Air_Waybills</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Account_Address__c</fullName>
        <formula>IF(Shipper_Account__r.BillingStreet != null, Shipper_Account__r.BillingStreet, &apos;&apos;)
            &amp;
            IF(Shipper_Account__r.BillingCity != null, &apos;, &apos;&amp;Shipper_Account__r.BillingCity, &apos;&apos;)
            &amp;
            IF(Shipper_Account__r.BillingPostalCode != null, &apos;, &apos;&amp;Shipper_Account__r.BillingPostalCode, &apos;&apos;)
            &amp;
            IF(Shipper_Account__r.BillingState != null, &apos;, &apos;&amp;Shipper_Account__r.BillingState, &apos;&apos;)
            &amp;
            IF(Shipper_Account__r.BillingCountry != null, &apos;, &apos;&amp;Shipper_Account__r.BillingCountry, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>2</inlineHelpText>
        <label>Shipper Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Account_Phone__c</fullName>
        <formula>Shipper_Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>2</inlineHelpText>
        <label>Shipper Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipper_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>2</inlineHelpText>
        <label>Shipper Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Shipper</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waybills (Shipper Account)</relationshipLabel>
        <relationshipName>Air_Waybills1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Alternative_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Alternative Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Shipper</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Waybills (Shipper Alternative Account)</relationshipLabel>
        <relationshipName>Waybills3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Shipper_Alternative_Address__c</fullName>
        <label>Shipper Alternative Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Shipper_Alternative_Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipper Alternative Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Waybills (Shipper Alternative Country)</relationshipLabel>
        <relationshipName>Waybills3</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>